Improved the css

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
                         Projects
                     </a>
                 </li>
-                <li class="button">
-                    <a href="#">
+                <li>
+                    <a href="#" class="button">
                         <i class="fa-regular fa-paper-plane fa-bounce"></i>
                         Message Me
                     </a>
@@ -96,54 +96,68 @@
                 <p>Public Repository</p>
             </div>
         </div>
-        <!-- =====EDUVATION===== -->
     <!-- Education Section -->
     <section id="education" class="section-container">
-        <h3>Education</h3>
+        <h3 class="gradient">Education</h3>
         <div class="cards">
             <div class="card">
                 <h4>University of Ibadan</h4>
-                <span>2021 - Present</span>
-                <p>B.Sc. in Mathematics and Education (with interest in Computer Science)</p>
+                <span>2025 - Present</span>
+                <p class="gradient">B.Sc. in Mathematics and Education (with interest in Computer Science)</p>
             </div>
             <div class="card">
                 <h4>Online Bootcamps & Courses</h4>
                 <span>2022 - 2024</span>
-                <p>Completed various web development, PHP, C#, and ASP.NET Core courses.</p>
+                <p class="gradient">Completed various web development, PHP, C#, and ASP.NET Core courses.</p>
             </div>
         </div>
     </section>
 
     <!-- Experience Section -->
     <section id="experience" class="section-container">
-        <h3>Experience</h3>
+        <h3 class="gradient">Experience</h3>
         <div class="cards">
             <div class="card">
                 <h4>Aero Contractors (Intern)</h4>
                 <span>June 2024 - August 2024</span>
-                <p>Worked on PHP-based internal tools, enhancing performance and adding features for digital workflows.</p>
+                <p class="gradient">Worked on PHP-based internal tools, enhancing performance and adding features for digital workflows.</p>
             </div>
             <div class="card">
                 <h4>Ola J’s Tasty Kitchen (SEO Intern)</h4>
                 <span>March 2025 - May 2025</span>
-                <p>Optimized website for search engines to improve local visibility and search rankings for a UK-based food business.</p>
+                <p class="gradient">Optimized website for search engines to improve local visibility and search rankings for a UK-based food business.</p>
             </div>
         </div>
     </section>
 
     <!-- Projects Section -->
     <section id="projects" class="section-container">
-        <h3>Projects</h3>
+        <h3 class="gradient">Projects</h3>
         <div class="cards projects-grid">
             <div class="card project-card">
                 <h4>Smart Attendance System</h4>
                 <span>PHP | React | QR & GPS</span>
-                <p>A university attendance system using dynamic QR codes and GPS verification to prevent proxy check-ins.</p>
+                <p class="gradient">A university attendance system using dynamic QR codes and GPS verification to prevent proxy check-ins.</p>
             </div>
             <div class="card project-card">
                 <h4>Telegram to MetaTrader Bot</h4>
                 <span>C# | MT5</span>
-                <p>An automated trading bot that executes MetaTrader orders via Telegram commands.</p>
+                <p class="gradient">An automated trading bot that executes MetaTrader orders via Telegram commands.</p>
+            </div>
+            <div class="card project-card">
+                <h4>Telegram to MetaTrader Bot</h4>
+                <span>C# | MT5</span>
+                <p class="gradient">An automated trading bot that executes MetaTrader orders via Telegram commands.</p>
+            </div>
+            <div class="card project-card">
+                <h4>Telegram to MetaTrader Bot</h4>
+                <span>C# | MT5</span>
+                <p class="gradient">An automated trading bot that executes MetaTrader orders via Telegram commands.</p>
+            </div>
+            <div class="card project-card">
+                <h4>Telegram to MetaTrader Bot</h4>
+                <span>C# | MT5</span>
+                <p class="gradient">An automated trading bot that executes MetaTrader orders via Telegram commands.</p>
             </div>
             <!-- Add more project cards here -->
         </div>
@@ -151,9 +165,9 @@
 
     <!-- Contact Section -->
     <section id="contact" class="section-container">
-        <h3>Get In Touch</h3>
-        <p>Feel free to reach out for project collaborations or just a friendly chat.</p>
-        <a href="mailto:youremail@example.com" class="button">Email Me</a>
+        <h3 class="gradient">Get In Touch</h3>
+        <p class="gradient">Feel free to reach out for project collaborations or just a friendly chat.</p>
+        <a href="mailto:youremail@example.com" class="button gradient">Email Me</a>
     </section>
     </div>
 
