Updated text and Image

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#" class="button">
+                    <a href="#" class="button gradient">
                         <i class="fa-regular fa-paper-plane fa-bounce"></i>
                         Message Me
                     </a>
@@ -63,7 +63,7 @@
                 <div class="me">
                     <h5>I am Oluwatumininu <i class="fa-solid fa-ghost fa-bounce"></i></h5>
                     <h1 class="gradient-text">Software <br> <span class="dev">Developer</span></h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur nec imperdiet enim, vitae vulputate neque. Donec quis massa in quam.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur nec imperdiet enim, vitae vulputate neque. Donec quis massa in quam. </p>
+                    <p>I am a result oriented and innovative developer with hands on experience in designing, building and optimizing software as well as debugging legacy code. I am skilled in various technologies and framework including expertise in database management. I am a strong collaborator with a track record of developing roboust solution for airline systems</p>
                 </div>
                 <div class="social">
                     <a href="#"><i class="fa-brands fa-linkedin-in fa-fade"></i></a>
@@ -75,7 +75,7 @@
                 </div>
             </div>
             <div class="right-img">
-                <img src="img/profile.jpg" alt="My Picture">
+                <img src="img/tboy.jpg" alt="My Picture">
             </div>
         </div>
         <div class="stat gradient">
@@ -84,7 +84,7 @@
                 <p>Years of Experience</p>
             </div>
             <div class="stat-info">
-                <div class="num">50+</div>
+                <div class="num">10+</div>
                 <p>Projects Completed</p>
             </div>
             <div class="stat-info">
@@ -103,12 +103,12 @@
             <div class="card">
                 <h4>University of Ibadan</h4>
                 <span>2025 - Present</span>
-                <p class="gradient">B.Sc. in Mathematics and Education (with interest in Computer Science)</p>
+                <p class="gradient">B.Sc(Ed) Mathematics and Education</p>
             </div>
             <div class="card">
                 <h4>Online Bootcamps & Courses</h4>
-                <span>2022 - 2024</span>
-                <p class="gradient">Completed various web development, PHP, C#, and ASP.NET Core courses.</p>
+                <span>2022 - Present</span>
+                <p class="gradient">Completed various Software development, PHP, C#, and ASP.NET Core courses with Certifications.</p>
             </div>
         </div>
     </section>
@@ -118,14 +118,19 @@
         <h3 class="gradient">Experience</h3>
         <div class="cards">
             <div class="card">
-                <h4>Aero Contractors (Intern)</h4>
-                <span>June 2024 - August 2024</span>
+                <h4>Aero Contractors - Software Developer (Internship)</h4>
+                <span>August 2024 - Present</span>
                 <p class="gradient">Worked on PHP-based internal tools, enhancing performance and adding features for digital workflows.</p>
             </div>
             <div class="card">
-                <h4>Ola J’s Tasty Kitchen (SEO Intern)</h4>
+                <h4>Ola J’s Tasty Kitchen - SEO Specialist</h4>
                 <span>March 2025 - May 2025</span>
-                <p class="gradient">Optimized website for search engines to improve local visibility and search rankings for a UK-based food business.</p>
+                <p class="gradient">Optimized website for search engines to improve local visibility and search rankings for a UK-based food business, helping the business website rank 1st in their dishes and services they offer</p>
+            </div>
+            <div class="card">
+                <h4>Capture The Flag - Cybersecurity</h4>
+                <span>April 2022</span>
+                <p class="gradient">Emerged as the 2nd runner-up of Diary of Hackers 2022 Capture the Flag Competition as the team lead.</p>
             </div>
         </div>
     </section>
@@ -135,14 +140,14 @@
         <h3 class="gradient">Projects</h3>
         <div class="cards projects-grid">
             <div class="card project-card">
-                <h4>Smart Attendance System</h4>
-                <span>PHP | React | QR & GPS</span>
-                <p class="gradient">A university attendance system using dynamic QR codes and GPS verification to prevent proxy check-ins.</p>
+                <h4>Easy Attendance</h4>
+                <span>PHP | Javascript | QR & GPS</span>
+                <p class="gradient">An attendance system for University of Ibadan using dynamic QR codes and GPS verification to prevent proxy check-ins.</p>
             </div>
             <div class="card project-card">
                 <h4>Telegram to MetaTrader Bot</h4>
                 <span>C# | MT5</span>
-                <p class="gradient">An automated trading bot that executes MetaTrader orders via Telegram commands.</p>
+                <p class="gradient">An automated trading bot that executes MetaTrader orders via Telegram messages from specified channel.</p>
             </div>
             <div class="card project-card">
                 <h4>Telegram to MetaTrader Bot</h4>
@@ -163,10 +168,23 @@
         </div>
     </section>
 
+    <!-- Language and frameworks -->
+    <section id="language" class="section-container">
+        <h3 class="gradient">Languages - Framework - Technologies</h3>
+        <div>
+            <a href="#"><i class="fa-brands fa-linkedin-in fa-fade"></i></a>
+            <a href="#"><i class="fa-brands fa-x-twitter fa-fade"></i></a>
+            <a href="#"><i class="fa-brands fa-whatsapp fa-fade"></i></a>
+            <a href="#"><i class="fa-brands fa-instagram fa-fade"></i></a>
+            <a href="#"><i class="fa-brands fa-github fa-fade"></i></a>
+            <a href="#"><i class="fa-brands fa-tiktok fa-fade"></i></a>
+        </div>
+    </section>
+
     <!-- Contact Section -->
     <section id="contact" class="section-container">
         <h3 class="gradient">Get In Touch</h3>
-        <p class="gradient">Feel free to reach out for project collaborations or just a friendly chat.</p>
+        <p class="gradient">Feel free to reach out for project, collaborations or just a friendly chat.</p><br>
         <a href="mailto:youremail@example.com" class="button gradient">Email Me</a>
     </section>
     </div>
