fixed font issue andcolor contrast

--- a/index.html
+++ b/index.html
@@ -20,31 +20,31 @@
         <div class="nav">
             <ul class="nav-links">
                 <li>
-                    <a href="#">
+                    <a href="#about">
                         <i class="fa-solid fa-user-secret fa-fade"></i>
                         About
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="#education">
                         <i class="fa-solid fa-graduation-cap fa-fade"></i>
                         Education
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="#experience">
                         <i class="fa-solid fa-briefcase fa-fade"></i>
                         Experience
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="#projects">
                         <i class="fa-solid fa-diagram-project fa-fade"></i>
                         Projects
                     </a>
                 </li>
                 <li>
-                    <a href="#" class="button gradient">
+                    <a href="#contact" class="button ">
                         <i class="fa-regular fa-paper-plane fa-bounce"></i>
                         Message Me
                     </a>
@@ -101,14 +101,14 @@
         <h3 class="gradient">Education</h3>
         <div class="cards">
             <div class="card">
-                <h4>University of Ibadan</h4>
+                <h4 class="gradient">University of Ibadan</h4>
                 <span>2025 - Present</span>
-                <p class="gradient">B.Sc(Ed) Mathematics and Education</p>
+                <p>B.Sc(Ed) Mathematics and Education</p>
             </div>
             <div class="card">
-                <h4>Online Bootcamps & Courses</h4>
+                <h4 class="gradient">Online Bootcamps & Courses</h4>
                 <span>2022 - Present</span>
-                <p class="gradient">Completed various Software development, PHP, C#, and ASP.NET Core courses with Certifications.</p>
+                <p>Completed various Software development, PHP, C#, and ASP.NET Core courses with Certifications.</p>
             </div>
         </div>
     </section>
@@ -118,19 +118,19 @@
         <h3 class="gradient">Experience</h3>
         <div class="cards">
             <div class="card">
-                <h4>Aero Contractors - Software Developer (Internship)</h4>
+                <h4 class="gradient">Aero Contractors - Software Developer (Internship)</h4>
                 <span>August 2024 - Present</span>
-                <p class="gradient">Worked on PHP-based internal tools, enhancing performance and adding features for digital workflows.</p>
+                <p>Worked on PHP-based internal tools, enhancing performance and adding features for digital workflows.</p>
             </div>
             <div class="card">
-                <h4>Ola J’s Tasty Kitchen - SEO Specialist</h4>
+                <h4 class="gradient">Ola J’s Tasty Kitchen - SEO Specialist</h4>
                 <span>March 2025 - May 2025</span>
-                <p class="gradient">Optimized website for search engines to improve local visibility and search rankings for a UK-based food business, helping the business website rank 1st in their dishes and services they offer</p>
+                <p>Optimized website for search engines to improve local visibility and search rankings for a UK-based food business, helping the business website rank 1st in their dishes and services they offer</p>
             </div>
             <div class="card">
-                <h4>Capture The Flag - Cybersecurity</h4>
+                <h4 class="gradient">Capture The Flag - Cybersecurity</h4>
                 <span>April 2022</span>
-                <p class="gradient">Emerged as the 2nd runner-up of Diary of Hackers 2022 Capture the Flag Competition as the team lead.</p>
+                <p>Emerged as the 2nd runner-up of Diary of Hackers 2022 Capture the Flag Competition as the team lead.</p>
             </div>
         </div>
     </section>
@@ -140,29 +140,29 @@
         <h3 class="gradient">Projects</h3>
         <div class="cards projects-grid">
             <div class="card project-card">
-                <h4>Easy Attendance</h4>
+                <h4 class="gradient">Easy Attendance</h4>
                 <span>PHP | Javascript | QR & GPS</span>
-                <p class="gradient">An attendance system for University of Ibadan using dynamic QR codes and GPS verification to prevent proxy check-ins.</p>
+                <p>An attendance system for University of Ibadan using dynamic QR codes and GPS verification to prevent proxy check-ins.</p>
             </div>
             <div class="card project-card">
-                <h4>Telegram to MetaTrader Bot</h4>
+                <h4 class="gradient">Telegram to MetaTrader Bot</h4>
                 <span>C# | MT5</span>
-                <p class="gradient">An automated trading bot that executes MetaTrader orders via Telegram messages from specified channel.</p>
+                <p>An automated trading bot that executes MetaTrader orders via Telegram messages from specified channel.</p>
             </div>
             <div class="card project-card">
-                <h4>Telegram to MetaTrader Bot</h4>
+                <h4 class="gradient">Telegram to MetaTrader Bot</h4>
                 <span>C# | MT5</span>
-                <p class="gradient">An automated trading bot that executes MetaTrader orders via Telegram commands.</p>
+                <p>An automated trading bot that executes MetaTrader orders via Telegram commands.</p>
             </div>
             <div class="card project-card">
-                <h4>Telegram to MetaTrader Bot</h4>
+                <h4 class="gradient">Telegram to MetaTrader Bot</h4>
                 <span>C# | MT5</span>
-                <p class="gradient">An automated trading bot that executes MetaTrader orders via Telegram commands.</p>
+                <p>An automated trading bot that executes MetaTrader orders via Telegram commands.</p>
             </div>
             <div class="card project-card">
-                <h4>Telegram to MetaTrader Bot</h4>
+                <h4 class="gradient">Telegram to MetaTrader Bot</h4>
                 <span>C# | MT5</span>
-                <p class="gradient">An automated trading bot that executes MetaTrader orders via Telegram commands.</p>
+                <p>An automated trading bot that executes MetaTrader orders via Telegram commands.</p>
             </div>
             <!-- Add more project cards here -->
         </div>
@@ -171,7 +171,7 @@
     <!-- Language and frameworks -->
     <section id="language" class="section-container">
         <h3 class="gradient">Languages - Framework - Technologies</h3>
-        <div>
+        <div class="lang">
             <a href="#"><i class="fa-brands fa-linkedin-in fa-fade"></i></a>
             <a href="#"><i class="fa-brands fa-x-twitter fa-fade"></i></a>
             <a href="#"><i class="fa-brands fa-whatsapp fa-fade"></i></a>
@@ -184,8 +184,8 @@
     <!-- Contact Section -->
     <section id="contact" class="section-container">
         <h3 class="gradient">Get In Touch</h3>
-        <p class="gradient">Feel free to reach out for project, collaborations or just a friendly chat.</p><br>
-        <a href="mailto:youremail@example.com" class="button gradient">Email Me</a>
+        <p style="color: #fff;">Feel free to reach out for project, collaborations or just a friendly chat.</p><br>
+        <a href="mailto:oluwatumininuowolabi8@gmail.com" class="button gradient">Email Me</a>
     </section>
     </div>
 
