added show love from selar

--- a/index.html
+++ b/index.html
@@ -186,6 +186,7 @@
         <h3 class="gradient">Get In Touch</h3>
         <p style="color: #fff;">Feel free to reach out for project, collaborations or just a friendly chat.</p><br>
         <a href="mailto:oluwatumininuowolabi8@gmail.com" class="button gradient">Email Me</a>
+        <a href="https://selar.com/showlove/t-boy" class="button gradient">Show Love</a>
     </section>
     </div>
 
