--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         <h3 class="gradient">Experience</h3>
         <div class="cards">
             <div class="card">
-                <h4 class="gradient">Aero Contractors - Software Developer (Internship)</h4>
+                <h4 class="gradient">Aero Contractors Nig. of Ltd. - Software Developer (Internship)</h4>
                 <span>August 2024 - Present</span>
                 <p>Worked on PHP-based internal tools, enhancing performance and adding features for digital workflows.</p>
             </div>
@@ -149,21 +149,7 @@
                 <span>C# | MT5</span>
                 <p>An automated trading bot that executes MetaTrader orders via Telegram messages from specified channel.</p>
             </div>
-            <div class="card project-card">
-                <h4 class="gradient">Telegram to MetaTrader Bot</h4>
-                <span>C# | MT5</span>
-                <p>An automated trading bot that executes MetaTrader orders via Telegram commands.</p>
-            </div>
-            <div class="card project-card">
-                <h4 class="gradient">Telegram to MetaTrader Bot</h4>
-                <span>C# | MT5</span>
-                <p>An automated trading bot that executes MetaTrader orders via Telegram commands.</p>
-            </div>
-            <div class="card project-card">
-                <h4 class="gradient">Telegram to MetaTrader Bot</h4>
-                <span>C# | MT5</span>
-                <p>An automated trading bot that executes MetaTrader orders via Telegram commands.</p>
-            </div>
+            
             <!-- Add more project cards here -->
         </div>
     </section>
