--- a/index.html
+++ b/index.html
@@ -1,181 +1,261 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Oluwatumininu Owolabi - Software Developer</title>
-    <link rel="stylesheet" href="css/style.css">
-    <script src="https://kit.fontawesome.com/1a4a4dce23.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="css/style.css" />
+    <script
+      src="https://kit.fontawesome.com/1a4a4dce23.js"
+      crossorigin="anonymous"
+    ></script>
     <!-- <link rel="shortcut icon" href="" type="image/x-icon"> -->
-    <meta http-equiv="X-UA-Compatible" content="IE=7">
+    <meta http-equiv="X-UA-Compatible" content="IE=7" />
     <!-- <meta name="description" content=""> -->
     <!-- <meta name="keywords" content=""> -->
-</head>
-<body>
+  </head>
+  <body>
     <header id="header">
-        <div class="logo">
-            Tboy
-        </div>
+      <div class="logo">Tboy</div>
 
-        <div class="nav">
-            <ul class="nav-links">
-                <li>
-                    <a href="#about">
-                        <i class="fa-solid fa-user-secret fa-fade"></i>
-                        About
-                    </a>
-                </li>
-                <li>
-                    <a href="#education">
-                        <i class="fa-solid fa-graduation-cap fa-fade"></i>
-                        Education
-                    </a>
-                </li>
-                <li>
-                    <a href="#experience">
-                        <i class="fa-solid fa-briefcase fa-fade"></i>
-                        Experience
-                    </a>
-                </li>
-                <li>
-                    <a href="#projects">
-                        <i class="fa-solid fa-diagram-project fa-fade"></i>
-                        Projects
-                    </a>
-                </li>
-                <li>
-                    <a href="#contact" class="button ">
-                        <i class="fa-regular fa-paper-plane fa-bounce"></i>
-                        Message Me
-                    </a>
-                </li>
-            </ul>
-            <div class="menu-toggle">
-                <i class="fa-solid fa-code fa-flip"></i>
-            </div>
+      <div class="nav">
+        <ul class="nav-links">
+          <li>
+            <a href="#about">
+              <i class="fa-solid fa-user-secret fa-fade"></i>
+              About
+            </a>
+          </li>
+          <li>
+            <a href="#education">
+              <i class="fa-solid fa-graduation-cap fa-fade"></i>
+              Education
+            </a>
+          </li>
+          <li>
+            <a href="#experience">
+              <i class="fa-solid fa-briefcase fa-fade"></i>
+              Experience
+            </a>
+          </li>
+          <li>
+            <a href="#projects">
+              <i class="fa-solid fa-diagram-project fa-fade"></i>
+              Projects
+            </a>
+          </li>
+          <li>
+            <a href="#contact" class="button">
+              <i class="fa-regular fa-paper-plane fa-bounce"></i>
+              Message Me
+            </a>
+          </li>
+        </ul>
+        <div class="menu-toggle">
+          <i class="fa-solid fa-code fa-flip"></i>
         </div>
+      </div>
     </header>
 
     <!-- === ABOUT=== -->
     <div id="about">
-        <div class="info">
-            <div class="left">
-                <div class="me">
-                    <h5>I am Oluwatumininu <i class="fa-solid fa-ghost fa-bounce"></i></h5>
-                    <h1 class="gradient-text">Software <br> <span class="dev">Developer</span></h1>
-                    <p>I am a result oriented and innovative developer with hands on experience in designing, building and optimizing software as well as debugging legacy code. I am skilled in various technologies and framework including expertise in database management. I am a strong collaborator with a track record of developing roboust solution for airline systems</p>
-                </div>
-                <div class="social">
-                    <a href="#"><i class="fa-brands fa-linkedin-in fa-fade"></i></a>
-                    <a href="#"><i class="fa-brands fa-x-twitter fa-fade"></i></a>
-                    <a href="#"><i class="fa-brands fa-whatsapp fa-fade"></i></a>
-                    <a href="#"><i class="fa-brands fa-instagram fa-fade"></i></a>
-                    <a href="#"><i class="fa-brands fa-github fa-fade"></i></a>
-                    <a href="#"><i class="fa-brands fa-tiktok fa-fade"></i></a>
-                </div>
-            </div>
-            <div class="right-img">
-                <img src="img/tboy.jpg" alt="My Picture">
-            </div>
-        </div>
-        <div class="stat gradient">
-            <div class="stat-info">
-                <div class="num">1.5+</div>
-                <p>Years of Experience</p>
-            </div>
-            <div class="stat-info">
-                <div class="num">10+</div>
-                <p>Projects Completed</p>
-            </div>
-            <div class="stat-info">
-                <div class="num">12</div>
-                <p>Certification</p>
-            </div>
-            <div class="stat-info">
-                <div class="num">2</div>
-                <p>Public Repository</p>
-            </div>
-        </div>
-    <!-- Education Section -->
-    <section id="education" class="section-container">
-        <h3 class="gradient">Education</h3>
-        <div class="cards">
-            <div class="card">
-                <h4 class="gradient">University of Ibadan</h4>
-                <span>2025 - Present</span>
-                <p>B.Sc(Ed) Mathematics and Education</p>
-            </div>
-            <div class="card">
-                <h4 class="gradient">Online Bootcamps & Courses</h4>
-                <span>2022 - Present</span>
-                <p>Completed various Software development, PHP, C#, and ASP.NET Core courses with Certifications.</p>
-            </div>
-        </div>
-    </section>
-
-    <!-- Experience Section -->
-    <section id="experience" class="section-container">
-        <h3 class="gradient">Experience</h3>
-        <div class="cards">
-            <div class="card">
-                <h4 class="gradient">Aero Contractors Nig. of Ltd. - Software Developer (Internship)</h4>
-                <span>August 2024 - Present</span>
-                <p>Worked on PHP-based internal tools, enhancing performance and adding features for digital workflows.</p>
-            </div>
-            <div class="card">
-                <h4 class="gradient">Ola J’s Tasty Kitchen - SEO Specialist</h4>
-                <span>March 2025 - May 2025</span>
-                <p>Optimized website for search engines to improve local visibility and search rankings for a UK-based food business, helping the business website rank 1st in their dishes and services they offer</p>
-            </div>
-            <div class="card">
-                <h4 class="gradient">Capture The Flag - Cybersecurity</h4>
-                <span>April 2022</span>
-                <p>Emerged as the 2nd runner-up of Diary of Hackers 2022 Capture the Flag Competition as the team lead.</p>
-            </div>
-        </div>
-    </section>
-
-    <!-- Projects Section -->
-    <section id="projects" class="section-container">
-        <h3 class="gradient">Projects</h3>
-        <div class="cards projects-grid">
-            <div class="card project-card">
-                <h4 class="gradient">Easy Attendance</h4>
-                <span>PHP | Javascript | QR & GPS</span>
-                <p>An attendance system for University of Ibadan using dynamic QR codes and GPS verification to prevent proxy check-ins.</p>
-            </div>
-            <div class="card project-card">
-                <h4 class="gradient">Telegram to MetaTrader Bot</h4>
-                <span>C# | MT5</span>
-                <p>An automated trading bot that executes MetaTrader orders via Telegram messages from specified channel.</p>
-            </div>
-            
-            <!-- Add more project cards here -->
-        </div>
-    </section>
-
-    <!-- Language and frameworks -->
-    <section id="language" class="section-container">
-        <h3 class="gradient">Languages - Framework - Technologies</h3>
-        <div class="lang">
+      <div class="info">
+        <div class="left">
+          <div class="me">
+            <h5>
+              I am Oluwatumininu <i class="fa-solid fa-ghost fa-bounce"></i>
+            </h5>
+            <h1 class="gradient-text">
+              Software <br />
+              <span class="dev">Developer</span>
+            </h1>
+            <p>
+              I am a result oriented and innovative developer with hands on
+              experience in designing, building and optimizing software as well
+              as debugging legacy code. I am skilled in various technologies and
+              framework including expertise in database management. I am a
+              strong collaborator with a track record of developing roboust
+              solution for airline systems
+            </p>
+          </div>
+          <div class="social">
             <a href="#"><i class="fa-brands fa-linkedin-in fa-fade"></i></a>
             <a href="#"><i class="fa-brands fa-x-twitter fa-fade"></i></a>
             <a href="#"><i class="fa-brands fa-whatsapp fa-fade"></i></a>
             <a href="#"><i class="fa-brands fa-instagram fa-fade"></i></a>
             <a href="#"><i class="fa-brands fa-github fa-fade"></i></a>
             <a href="#"><i class="fa-brands fa-tiktok fa-fade"></i></a>
+          </div>
         </div>
-    </section>
+        <div class="right-img">
+          <img src="img/tboy.jpg" alt="My Picture" />
+        </div>
+      </div>
+      <div class="stat gradient">
+        <div class="stat-info">
+          <div class="num">1.5+</div>
+          <p>Years of Experience</p>
+        </div>
+        <div class="stat-info">
+          <div class="num">10+</div>
+          <p>Projects Completed</p>
+        </div>
+        <div class="stat-info">
+          <div class="num">12</div>
+          <p>Certification</p>
+        </div>
+        <div class="stat-info">
+          <div class="num">2</div>
+          <p>Public Repository</p>
+        </div>
+      </div>
+      <!-- Education Section -->
+      <section id="education" class="section-container">
+        <h3 class="gradient">Education</h3>
+        <div class="cards">
+          <div class="card">
+            <h4 class="gradient">University of Ibadan</h4>
+            <span>2025 - Present</span>
+            <p>B.Sc(Ed) Mathematics and Education</p>
+          </div>
+          <div class="card">
+            <h4 class="gradient">Online Bootcamps & Courses</h4>
+            <span>2022 - Present</span>
+            <p>
+              Completed various Software development, PHP, C#, and ASP.NET Core
+              courses with Certifications.
+            </p>
+          </div>
+        </div>
+      </section>
 
-    <!-- Contact Section -->
-    <section id="contact" class="section-container">
+      <!-- Experience Section -->
+      <section id="experience" class="section-container">
+        <h3 class="gradient">Experience</h3>
+        <div class="cards">
+          <div class="card">
+            <h4 class="gradient">
+              Aero Contractors Nig. of Ltd. - Software Developer (Internship)
+            </h4>
+            <span>August 2024 - Present</span>
+            <p>
+              Worked on PHP-based internal tools, enhancing performance and
+              adding features for digital workflows.
+            </p>
+          </div>
+          <div class="card">
+            <h4 class="gradient">Ola J’s Tasty Kitchen - SEO Specialist</h4>
+            <span>March 2025 - May 2025</span>
+            <p>
+              Optimized website for search engines to improve local visibility
+              and search rankings for a UK-based food business, helping the
+              business website rank 1st in their dishes and services they offer
+            </p>
+          </div>
+          <div class="card">
+            <h4 class="gradient">Capture The Flag - Cybersecurity</h4>
+            <span>April 2022</span>
+            <p>
+              Emerged as the 2nd runner-up of Diary of Hackers 2022 Capture the
+              Flag Competition as the team lead.
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <!-- Projects Section -->
+      <section id="projects" class="section-container">
+        <h3 class="gradient">Projects</h3>
+        <div class="cards projects-grid">
+          <div class="card project-card">
+            <h4 class="gradient">Easy Attendance</h4>
+            <span>PHP | Javascript | MySQL | QR & GPS</span>
+            <p>
+              An attendance system for University of Ibadan using dynamic QR
+              codes and GPS verification to prevent proxy check-ins.
+            </p>
+          </div>
+          <div class="card project-card">
+            <h4 class="gradient">Complaint Ticketing System</h4>
+            <span>PHP | JavaScript | MySQL</span>
+            <p>
+              A complaint ticketing platform for Aero Contractors — I led this
+              project end-to-end, implementing a dynamic ticket submission &
+              comprehensive tracking workflow, and building an admin dashboard
+              for real-time issue resolution and analytics, as well as user
+              dashboard to track their complaint.
+            </p>
+          </div>
+
+          <div class="card project-card">
+            <h4 class="gradient">Telegram to MetaTrader Bot</h4>
+            <span>C# | MT5</span>
+            <p>
+              An automated trading bot that executes MetaTrader orders via
+              Telegram messages from specified channel.
+            </p>
+          </div>
+
+          <!-- Add more project cards here -->
+        </div>
+      </section>
+
+      <!-- Language and frameworks -->
+      <section id="language" class="section-container">
+        <h3 class="gradient">
+          Languages &#8211; Frameworks &#8211; Technologies
+        </h3>
+        <div class="lang">
+          <div class="tech-card">
+            <i class="fa-brands fa-html5"></i><span>HTML5</span>
+          </div>
+          <div class="tech-card">
+            <i class="fa-brands fa-css3-alt"></i><span>CSS3</span>
+          </div>
+          <div class="tech-card">
+            <i class="fa-brands fa-js-square"></i><span>JavaScript</span>
+          </div>
+          <div class="tech-card">
+            <i class="fa-brands fa-php"></i><span>PHP</span>
+          </div>
+          <div class="tech-card">
+            <i class="fa-solid fa-code"></i><span>C#</span>
+          </div>
+          <div class="tech-card">
+            <i class="fa-brands fa-python"></i><span>Python</span>
+          </div>
+          <div class="tech-card">
+            <i class="fa-brands fa-microsoft"></i><span>ASP.NET Core</span>
+          </div>
+          <div class="tech-card">
+            <i class="fa-solid fa-database"></i><span>SQL</span>
+          </div>
+          <div class="tech-card">
+            <i class="fa-brands fa-git-alt"></i><span>Git</span>
+          </div>
+          <div class="tech-card">
+            <i class="fa-brands fa-github"></i><span>GitHub</span>
+          </div>
+        </div>
+      </section>
+
+      <!-- Contact Section -->
+      <section id="contact" class="section-container">
         <h3 class="gradient">Get In Touch</h3>
-        <p style="color: #fff;">Feel free to reach out for project, collaborations or just a friendly chat.</p><br>
-        <a href="mailto:oluwatumininuowolabi8@gmail.com" class="button gradient">Email Me</a>
-        <a href="https://selar.com/showlove/t-boy" class="button gradient">Show Love</a>
-    </section>
+        <p style="color: #fff">
+          Feel free to reach out for project, collaborations or just a friendly
+          chat.
+        </p>
+        <br />
+        <a href="mailto:oluwatumininuowolabi8@gmail.com" class="button gradient"
+          >Email Me</a
+        >
+        <a href="https://selar.com/showlove/t-boy" class="button gradient"
+          >Show Love</a
+        >
+      </section>
     </div>
 
     <script src="js/app.js"></script>
-</body>
+  </body>
 </html>
