--- a/index.html
+++ b/index.html
@@ -97,15 +97,15 @@
           <p>Years of Experience</p>
         </div>
         <div class="stat-info">
-          <div class="num">10+</div>
+          <div class="num">5+</div>
           <p>Projects Completed</p>
         </div>
         <div class="stat-info">
-          <div class="num">12</div>
-          <p>Certification</p>
+          <div class="num">4</div>
+          <p>Programming Languages</p>
         </div>
         <div class="stat-info">
-          <div class="num">2</div>
+          <div class="num">4</div>
           <p>Public Repository</p>
         </div>
       </div>
@@ -171,8 +171,11 @@
             <h4 class="gradient">Easy Attendance</h4>
             <span>PHP | Javascript | MySQL | QR & GPS</span>
             <p>
-              An attendance system for University of Ibadan using dynamic QR
-              codes and GPS verification to prevent proxy check-ins.
+              An attendance system for Universities using dynamic QR codes and
+              GPS verification to prevent proxy check-ins and a lecturer
+              dashboard that computes the attendance percentage of student and a
+              student dashboard that computes their average attendance
+              percentage and attendance percentage for each courses offered.
             </p>
           </div>
           <div class="card project-card">
