--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
           </div>
           <div class="card">
             <h4 class="gradient">
-              Aero Contractors Nig. of Ltd. - Software Developer (Internship)
+              Aero Contractors Nig. of Ltd. - Software Developer
             </h4>
             <span>August 2024 - Present</span>
             <p>
